@@ -6,7 +6,8 @@
 - Remove unnecessary files.
 - New function 'mybasename'.
 - wtmpclean.c: avoid forward declarations.
-- wtmpclean.h: mark the function die with the attribute noreturn.
+- wtmpclean.h: mark the function 'die' with the attribute noreturn.
+- generalize the function 'die' by adding an argument for the last error number.
 
 * Changes in wtmpclean 0.8.0 -- Davide Madrisan (Dec 10 2013)
 - New output format for date and time in the raw dump mode.
